# sarif2gha

./: .gitignore  .yamllint.yml  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  lint.yml  sarif.yml  test.yml
samples/: Makefile
samples/pwsh/: bad-code.ps1
src/sarif2gha/: __init__.py  analysis_result.py  conversion_context.py  github_annotation_encoder.py  sarif_loader.py  stdout_writer.py
tests/: test_conversion_context.py  test_github_annotation_encoder.py  test_sarif_loader.py  test_stdout_writer.py
