[project]
name = "sarif2gha"
version = "0.1.0"
description = "Output GitHub Annotation style log from SARIF file."
readme = "README.md"
authors = [
    { name = "Minoru Sekine", email = "Minoru.Sekine.JP@gmail.com" }
]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sarif2gha = "sarif2gha:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 88
fix = false

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "B",    # flake8-bugbear
  "I",    # isort
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "T20",  # flake8-print
  "RET",  # flake8-return
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
]

[tool.uv]
package=true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
